⚡️ - Use OX linter and formatter

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,37 +16,22 @@ services:
       timeout: 5s
       retries: 5
 
-  elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.11.0
-    container_name: thmanyah-elasticsearch
-    environment:
-      - discovery.type=single-node
-      - xpack.security.enabled=false
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+  redis:
+    image: redis:7-alpine
+    container_name: thmanyah-redis
     ports:
-      - "9200:9200"
+      - "6379:6379"
     volumes:
-      - es_data:/usr/share/elasticsearch/data
+      - redis_data:/data
     healthcheck:
-      test: ["CMD-SHELL", "curl -s http://localhost:9200 >/dev/null || exit 1"]
-      interval: 10s
-      timeout: 10s
-      retries: 5
-
-  nats:
-    image: nats:2.10-alpine
-    container_name: thmanyah-nats
-    command: ["--jetstream", "--store_dir=/data"]
-    ports:
-      - "4222:4222"
-      - "8222:8222"
-    volumes:
-      - nats_data:/data
-    healthcheck:
-      test: ["CMD", "wget", "--spider", "-q", "http://localhost:8222/healthz"]
+      test: ["CMD", "redis-cli", "ping"]
       interval: 5s
       timeout: 5s
       retries: 5
+
+volumes:
+  postgres_data:
+  redis_data:
 
 volumes:
   postgres_data:
