--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "dependencies": {
     "@apollo/server": "^5.3.0",
+    "@as-integrations/express5": "^1.1.2",
+    "@nestjs-modules/ioredis": "^2.0.2",
     "@nestjs/apollo": "^13.2.3",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
@@ -34,10 +36,12 @@
     "@nestjs/event-emitter": "^3.0.1",
     "@nestjs/graphql": "^13.2.3",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.2.5",
     "@nestjs/typeorm": "^11.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "graphql": "^16.12.0",
+    "ioredis": "^5.9.2",
     "pg": "^8.18.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
