🏗️ - Improve the architecture

--- a/.postman/config.json
+++ b/.postman/config.json
@@ -7,9 +7,7 @@
     "flows": [],
     "globals": [],
     "mocks": [],
-    "specs": [
-      "../src/discovery/schema.gql"
-    ],
+    "specs": ["../src/discovery/schema.gql"],
     "collections": []
   }
 }
