--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,12 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
+    "paths": {
+      "@shared/*": ["src/shared/*"],
+      "@cms/*": ["src/cms/*"],
+      "@discovery/*": ["src/discovery/*"],
+      "@ingestion/*": ["src/ingestion/*"]
+    },
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": true,
