--- a/.env.example
+++ b/.env.example
@@ -9,11 +9,12 @@ DATABASE_NAME=thmanyah
 DATABASE_USER=thmanyah
 DATABASE_PASSWORD=thmanyah_secret
 
-# Elasticsearch
-ELASTICSEARCH_URL=http://localhost:9200
+# Redis
+REDIS_URL=redis://localhost:6379
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_DB=0
 
-# NATS
-NATS_URL=nats://localhost:4222
-
-# YouTube API (optional - for ingestion)
+# Optional integrations
 YOUTUBE_API_KEY=
