--- a/.env.test
+++ b/.env.test
@@ -1,17 +1,17 @@
 # Test Environment Configuration
-# Used by E2E tests
-
-# Application
-PORT=3001
 NODE_ENV=test
+PORT=3001
 
-# Database (use a separate test database)
+# Database (dedicated test DB or Testcontainers)
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DATABASE_NAME=thmanyah_test
-DATABASE_USER=mmoussaoui
-DATABASE_PASSWORD=
+DATABASE_USER=thmanyah
+DATABASE_PASSWORD=thmanyah_secret
 
-# Redis (optional for tests - using mock)
+# Redis
+REDIS_URL=redis://localhost:6379
 REDIS_HOST=localhost
 REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_DB=1
